--- a/booking-service/src/main/resources/application.properties
+++ b/booking-service/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-
 server.port=8081
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/booking_service_db?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=pass123
