--- a/movie-service/src/main/resources/application.properties
+++ b/movie-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8082
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/user_service_db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/movie_service_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=pass123
