--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/user_service_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=pass123
+spring.mvc.dispatch-options-request=true
